# first-served-coupon-system-for-rust

./: Cargo.toml
