[package]
name = "coupon"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-macros = "0.4.1"
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.4.13"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.7.4", default-features = false, features = ["runtime-async-std", "macros", "postgres", "chrono"] }

redis = "0.25.4"
rslock = "0.4.0"

# error
anyhow = "1.0.81"
thiserror = "1.0.58"

# 유틸
log = "0.4.21"
log4rs = "1.3.0"
uuid = "1.9.0"